05.07.2020
README updated

04.07.2020
Singlethreaded and multithreaded variant were merged into a single application

03.07.2020
Parallel mode: If a movement in a certain direction immediately leads to death, no new worker is created
Functions for measuring average and maximum processing times
Code cleanup
README upadte

02.06.2020
Parallel mode: Full multithreading functionality, however too many web workers exist resulting in performance being worse than the singlethreaded version
Parallel mode: Number of workers limited

If survivabliilty is proven for one direction, the other directions are no longer checked -> dramatic increase of recursion depth possible without sacrificing performance

28.06.2020
Performance improvements allowing the snake to look further into the future during the same period of time
Independency from jQuery
Removed user-scalable="no"
Best movements are chosen randomly to prevent loops
Movements opposing the current direction are no longer considered
The number of steps the snake looks into the future now depend on its length -> performance improvement for smaller snake lengths
If death is inevitable, the snake moves closer to the food source

27.06.2020
Removed keyboard controls
README update
Removed enterLeaderBoardScreen

26.06.2020
Algorithm for automatically choosing best direction
UI adjustments
Icon update