@@ -3,7 +3,6 @@ var speed = 75;
 var maxSurvivalCheckDepth = 25;
 
 var grid;
-var snakeLength;
 var movingDirection;
 var moveInterval;
 var score;
@@ -86,7 +85,6 @@ var starter = {
 	},
 
 	createSnake: function() {
-		snakeLength = 1;
 		grid[gridSize + 1] = {type: "snake", disappearIn: 1, head: true};
 	},
 
@@ -103,8 +101,8 @@ var starter = {
 			grid = moveReturn[0];
 
 			if (moveSuccess == 1) {
-				grid = growSnake();
 				grid = createFood();
+				score += 1;
 			}
 
 			if (moveSuccess >= 0) {
@@ -160,9 +158,6 @@ function growSnake(tempGrid = JSON.parse(JSON.stringify(grid))) {
 			tempGrid[field].disappearIn += 1;
 		}
 	}
-
-	snakeLength++;
-	score++;
 
 	return tempGrid;
 }
@@ -232,11 +227,30 @@ function move(direction, tempGrid = grid) {
 
 			tempGrid[nextHeadPosition].type = "snake";
 			tempGrid[nextHeadPosition].head = true;
-			tempGrid[nextHeadPosition].disappearIn = snakeLength;
+			tempGrid[nextHeadPosition].disappearIn = getSnakeLength(tempGrid);
+
+			if (success == 1) {
+				tempGrid = growSnake(tempGrid);
+			}
 		}
 	}
 
 	return [tempGrid, success];
+}
+
+
+
+function getSnakeLength(tempGrid) {
+	tempGrid = JSON.parse(JSON.stringify(tempGrid));
+	var length = 0;
+
+	for (let element of tempGrid) {
+		if (element.type == "snake") {
+			length += 1;
+		}
+	}
+
+	return length;
 }
 
 
@@ -252,7 +266,7 @@ function display() {
 		if (grid[i].type == "snake") {
 			gridTiles[i].classList.add("snake");
 
-			if (grid[i].head === true) { //richtig?
+			if (grid[i].head === true) {
 				gridTiles[i].classList.add("head");
 			}
 		}
@@ -306,6 +320,7 @@ async function autoDirection() {
 
     //rate movements negatively if they inevitably lead to the snake dying
 	var survivalCheckDepth;
+	var snakeLength = getSnakeLength(grid)
 
 	if (snakeLength < maxSurvivalCheckDepth) {
 		survivalCheckDepth = snakeLength;
@@ -453,7 +468,7 @@ async function survivalPossible(depth, tempGrid) {
 		if (move_up[1] != -1) {
 			upWorker = new Worker("./survivalWorker.js");
 			upWorker.onmessage = pushWorkerResult;
-			upWorker.postMessage(JSON.stringify([move_up, depth - 1, gridSize, snakeLength, depth]));
+			upWorker.postMessage(JSON.stringify([move_up, depth - 1, gridSize, depth]));
 		}
 		else {
 			survivalPossibilities.push(false);
@@ -462,7 +477,7 @@ async function survivalPossible(depth, tempGrid) {
 		if (move_right[1] != -1) {
 			rightWorker = new Worker("./survivalWorker.js");
 			rightWorker.onmessage = pushWorkerResult;
-			rightWorker.postMessage(JSON.stringify([move_right, depth - 1, gridSize, snakeLength, depth]));
+			rightWorker.postMessage(JSON.stringify([move_right, depth - 1, gridSize, depth]));
 		}
 		else {
 			survivalPossibilities.push(false);
@@ -471,7 +486,7 @@ async function survivalPossible(depth, tempGrid) {
 		if (move_down[1] != -1) {
 			downWorker = new Worker("./survivalWorker.js");
 			downWorker.onmessage = pushWorkerResult;
-			downWorker.postMessage(JSON.stringify([move_down, depth - 1, gridSize, snakeLength, depth]));
+			downWorker.postMessage(JSON.stringify([move_down, depth - 1, gridSize, depth]));
 		}
 		else {
 			survivalPossibilities.push(false);
@@ -480,7 +495,7 @@ async function survivalPossible(depth, tempGrid) {
 		if (move_left[1] != -1) {
 			leftWorker = new Worker("./survivalWorker.js");
 			leftWorker.onmessage = pushWorkerResult;
-			leftWorker.postMessage(JSON.stringify([move_left, depth - 1, gridSize, snakeLength, depth]));
+			leftWorker.postMessage(JSON.stringify([move_left, depth - 1, gridSize, depth]));
 		}
 		else {
 			survivalPossibilities.push(false);
