@@ -1,5 +1,6 @@
 05.07.2020
 README updated
+When determining survival possibilities, snake growth is factored in as well
 
 04.07.2020
 Singlethreaded and multithreaded variant were merged into a single application
